tests/typecheck/fail/module_scope_rebind.tw
// Rebinding at module scope is not allowed
x := 10
x = 20
